# m2_php_opencl-td2

./: .gitignore  CMakeLists.txt  MIN.txt  README.md  config.h.in  kernel.cl  main.cpp  opencl.cpp
